# discovery_dojo

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: lint_before_you_leap.yml
docs/: design.md
examples/text_summarization_flows/: async_nested_batch_flow.py  basic_flow.py  batch_flow.py  branching_flow.py  nested_batch_flow.py
examples/text_summarization_flows/docs/: design.md
examples/text_summarization_flows/texts/: text2.txt  text3.txt
examples/text_summarization_flows/utils/: llm_utils.py
my_first_pf/: README.md  sample.txt
my_first_pf/docs/: design.md
notes/: README.md  system_design.md  system_design_openai_deep_research.md  thoughts.md
src/: main.py
src/domain/: config.py  reranking.py  shared_store.py
src/flows/: flow_factory.py  idea_generation_flow.py  legacy_qa_flow.py  plan_flow.py  rag_flow.py  research_assistant_flow.py
src/nodes/: idea_generation.py  plan_generation.py  rag_novelty.py
src/utils/: custom_qdrant_client.py  llm_utils.py  prompts.py  reranking.py  search_utils.py  tavily_search.py
text_summarization_flow/: flow.py  main.py
text_summarization_flow/utils/: llm_utils.py
typings/pocketflow/: __init__.pyi
